--- a/briar-android/src/main/res/values-ja/strings.xml
+++ b/briar-android/src/main/res/values-ja/strings.xml
@@ -121,4 +121,5 @@
   <!--Sign Out-->
   <!--Screen Filters & Tapjacking-->
   <!--Permission Requests-->
+  <!--Low Memory Notification-->
 </resources>
