--- a/briar-android/src/main/res/values-bg/strings.xml
+++ b/briar-android/src/main/res/values-bg/strings.xml
@@ -326,4 +326,5 @@
   <!--Screen Filters & Tapjacking-->
   <string name="screen_filter_title">Открит е овърлей на екрана</string>
   <!--Permission Requests-->
+  <!--Low Memory Notification-->
 </resources>
