--- a/briar-android/src/main/res/values-eu/strings.xml
+++ b/briar-android/src/main/res/values-eu/strings.xml
@@ -33,6 +33,8 @@
   <string name="startup_failed_notification_title">Ezin izan da Briar abiatu</string>
   <string name="startup_failed_notification_text">Sakatu informazio gehiagorako</string>
   <string name="startup_failed_activity_title">Briar abio-hutsegitea</string>
+  <string name="startup_failed_db_error">Dena delakoagatik, zure Briar datu-basea hondatuta dago eta ezin da konpondu. Zure kontua, zure datuak eta zure kontaktuak galdu dira. Zoritxarrez Briar berrinstalatu behar duzu eta kontu berria sortu \'Pasahitza ahaztu dut\' aukeratuz.</string>
+  <string name="startup_failed_data_too_old_error">Zure kontua aplikazio honen bertsio zahar batekin sortu zen eta ezin da bertsio honekin ireki. Aurreko bertsioa instalatu dezakezu edo kontua berri bat sortu \'Pasahitza ahaztu dit\' aukeratuz.</string>
   <string name="startup_failed_data_too_new_error">Aplikazioaren bertsio hau zaharregia da. Eguneratu azken bertsiora eta saiatu berriro.</string>
   <string name="startup_failed_service_error">Briar aplikazioak ezin izan du ezinbesteko plugin bat abiatu. Briar berrinstalatzeak arazoa konpondu ohi du. Hala ere, jakin zure kontua eta datuak galduko dituzula Briar aplikazioak ez baititu zerbitzari zentralak erabiltzen zure datuak gordetzeko.</string>
   <plurals name="expiry_warning">
@@ -41,6 +43,9 @@
   </plurals>
   <string name="expiry_update">Probetarako iraungitze data luzatu da. Zure kontua %d egun barru iraungituko da.</string>
   <string name="expiry_date_reached">Programa hau iraungitu da.\nEskerrik asko probatzeagatik!</string>
+  <string name="download_briar">Briar erabiltzen jarraitzeko, deskargatu 1.0 bertsioa.</string>
+  <string name="create_new_account">Kontu berri bat sortu beharko duzu, baina erabiltzaile-izen berdina erabili dezakezu.</string>
+  <string name="download_briar_button">Deskargatu Briar 1.0</string>
   <string name="startup_open_database">Datu-basea deszifratzen...</string>
   <string name="startup_migrate_database">Datu-basea eguneratzen...</string>
   <!--Navigation Drawer-->
@@ -99,7 +104,9 @@
   <string name="help">Laguntza</string>
   <string name="sorry">Sentitzen dugu</string>
   <!--Contacts and Private Conversations-->
+  <string name="no_contacts">Kontakturik ez erakusteko\n\nSakatu + ikonoa kontaktua gehitzeko</string>
   <string name="date_no_private_messages">Mezurik ez.</string>
+  <string name="no_private_messages">Mezurik ez erakusteko</string>
   <string name="message_hint">Idatzi mezua</string>
   <string name="delete_contact">Ezabatu kontaktua</string>
   <string name="dialog_title_delete_contact">Berretsi kontaktua ezabatzea</string>
@@ -226,6 +233,8 @@
   <string name="forum_invitation_received">%1$s erabiltzaileak \"%2$s\" foroa partekatu du zurekin.</string>
   <string name="forum_invitation_sent">\"%1$s\" foroa partekatu duzu %2$s erabiltzailearekin.</string>
   <string name="forum_invitations_title">Forora gonbidapenak</string>
+  <string name="forum_joined_toast">Forora elkartuta</string>
+  <string name="forum_declined_toast">Gonbidapena ukatuta</string>
   <string name="shared_by_format">%s erabiltzaileak partekatuta</string>
   <string name="forum_invitation_already_sharing">Dagoeneko partekatzen</string>
   <string name="forum_invitation_response_accepted_sent"> %s erabiltzailearen foro gonbidapena onartu duzu.</string>
@@ -244,12 +253,14 @@
   <string name="blogs_other_blog_empty_state">Ez dago mezurik erakusteko</string>
   <string name="read_more">irakurri gehiago</string>
   <string name="blogs_write_blog_post">Idatzi blog sarrera</string>
+  <string name="blogs_write_blog_post_body_hint">Idatzi zure blog sarrera</string>
   <string name="blogs_publish_blog_post">Argitaratu</string>
   <string name="blogs_blog_post_created">Blog sarrera sortuta</string>
   <string name="blogs_blog_post_received">Blog sarrera berria jasota</string>
   <string name="blogs_blog_post_scroll_to">Korritu hona</string>
   <string name="blogs_remove_blog">Kendu bloga</string>
   <string name="blogs_remove_blog_ok">Kendu</string>
+  <string name="blogs_blog_removed">Blog-a kenduta</string>
   <string name="blogs_reblog_comment_hint">Gehitu iruzkina (aukerazkoa)</string>
   <string name="blogs_reblog_button">Birblogeatu</string>
   <!--Blog Sharing-->
@@ -264,6 +275,8 @@
   <string name="blogs_sharing_invitation_received">%1$s erabiltzaileak \"%2$s\" bloga partekatu du zurekin.</string>
   <string name="blogs_sharing_invitation_sent">\"%1$s\" bloga partekatu duzu %2$s erabiltzailearekin.</string>
   <string name="blogs_sharing_invitations_title">Blog gonbidapenak</string>
+  <string name="blogs_sharing_joined_toast">Blog-era harpidetuta</string>
+  <string name="blogs_sharing_declined_toast">Gonbidapena ukatuta</string>
   <string name="sharing_status_blog">Blog batetara harpidetutako edonork berau partekatu dezake bere kontaktuekin. Honako kontaktuekin partekatzen duzu zuk. Ikusten ez dituzun harpidedun gehiago egon daitezke.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Inportatu RSS jarioa</string>
@@ -277,6 +290,7 @@
   <string name="blogs_rss_remove_feed">Kendu jarioa:</string>
   <string name="blogs_rss_remove_feed_ok">Kendu</string>
   <string name="blogs_rss_feeds_manage_delete_error">Ezin izan da jarioa ezabatu!</string>
+  <string name="blogs_rss_feeds_manage_empty_state">RSS jariorik ez erakusteko\n\nSakatu + ikonoa jario bat inportatzeko</string>
   <string name="blogs_rss_feeds_manage_error">Arazo bat egon da zure jarioak kargatzean. Saiatu berriro geroago.</string>
   <!--Settings Network-->
   <string name="network_settings_title">Sareak</string>
@@ -313,12 +327,16 @@
   <string name="notification_settings_title">Jakinarazpenak</string>
   <string name="notify_private_messages_setting_title">Mezu pribatuak</string>
   <string name="notify_private_messages_setting_summary">Erakutsi mezu pribatuen alertak</string>
+  <string name="notify_private_messages_setting_summary_26">Konfiguratu mezu pribatuen alertak</string>
   <string name="notify_group_messages_setting_title">Talde mezuak</string>
   <string name="notify_group_messages_setting_summary">Erakutsi taldeetako mezuen alertak</string>
+  <string name="notify_group_messages_setting_summary_26">Konfiguratu taldeetako mezuen alertak</string>
   <string name="notify_forum_posts_setting_title">Foroko sarrerak</string>
   <string name="notify_forum_posts_setting_summary">Erakutsi foroko sarreren alertak</string>
+  <string name="notify_forum_posts_setting_summary_26">Konfiguratu foroko mezuen alertak</string>
   <string name="notify_blog_posts_setting_title">Blog sarrerak</string>
   <string name="notify_blog_posts_setting_summary">Erakutsi blog sarreren alertak</string>
+  <string name="notify_blog_posts_setting_summary_26">Konfiguratu blog sarrerentzako alertak</string>
   <string name="notify_vibration_setting">Bibratu</string>
   <string name="notify_lock_screen_setting_title">Blokeo-pantaila</string>
   <string name="notify_lock_screen_setting_summary">Erakutsi jakinarazpenak blokeo-pantailan</string>
@@ -362,4 +380,9 @@
   <string name="permission_camera_request_body">QR kodea eskaneatzeko Briar-ek kamera atzitu behar du.</string>
   <string name="permission_camera_denied_body">Kameraatzitzeko baimena ukatu duzu, baina kontaktuak gehitzeko kamera behar da.\n\nMesedez baimendu sarbidea.</string>
   <string name="permission_camera_denied_toast">Eza kameraren baimenik eman</string>
+  <string name="qr_code">QR kodea</string>
+  <string name="show_qr_code_fullscreen">Erakutsi QR kodea pantaila osoan</string>
+  <!--Low Memory Notification-->
+  <string name="low_memory_shutdown_notification_title">Briar saioa amaituta</string>
+  <string name="low_memory_shutdown_notification_text">Saioa amaituta memoria faltagatik</string>
 </resources>
