--- a/briar-android/src/main/res/values-fi/strings.xml
+++ b/briar-android/src/main/res/values-fi/strings.xml
@@ -370,4 +370,5 @@
   <string name="permission_camera_denied_toast">Kameralupaa ei myönnetty</string>
   <string name="qr_code">QR-koodi</string>
   <string name="show_qr_code_fullscreen">Näytä QR-koodi koko näytöllä</string>
+  <!--Low Memory Notification-->
 </resources>
