--- a/briar-android/src/main/res/values-pt-rBR/strings.xml
+++ b/briar-android/src/main/res/values-pt-rBR/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!--Setup-->
-  <string name="setup_title">Bem-vindo ao Briar</string>
+  <string name="setup_title">Boas-vindas ao Briar</string>
   <string name="setup_name_explanation">Seu nome de usuária será mostrado próximo a qualquer conteúdo que você publicar. Você não pode mudá-lo depois que criar sua conta,</string>
   <string name="setup_next">Próximo</string>
   <string name="setup_password_intro">Escolha uma senha</string>
@@ -43,6 +43,9 @@
   </plurals>
   <string name="expiry_update">O prazo de validade da versão de teste foi extendido. Agora sua conta irá expirar em %d dias.</string>
   <string name="expiry_date_reached">Este software expirou.\nObrigado por testar!</string>
+  <string name="download_briar">Para continuar usando o Briar, por favor baixe a versão 1.0.</string>
+  <string name="create_new_account">Você precisará criar uma nova conta, mas poderá usar o mesmo nome de usuária.</string>
+  <string name="download_briar_button">Baixar Briar 1.0</string>
   <string name="startup_open_database">Descriptografando Banco de Dados...</string>
   <string name="startup_migrate_database">Atualizando Banco de Dados...</string>
   <!--Navigation Drawer-->
@@ -101,7 +104,9 @@
   <string name="help">Ajuda</string>
   <string name="sorry">Sentimos muito</string>
   <!--Contacts and Private Conversations-->
+  <string name="no_contacts">Nenhum contato para serexibido\n\nPressione o ícone + para adicionar um novo contato</string>
   <string name="date_no_private_messages">Sem Mensagens</string>
+  <string name="no_private_messages">Nenhuma mensagem para ser exibida</string>
   <string name="message_hint">Digite a mensagem</string>
   <string name="delete_contact">Apagar contato</string>
   <string name="dialog_title_delete_contact">Confirmar remoção do contato</string>
@@ -118,7 +123,7 @@
   <string name="contact_added_toast">Contato adicionado: %s</string>
   <string name="contact_already_exists">Contato %s já existe</string>
   <string name="contact_exchange_failed">Troca de contatos falhou</string>
-  <string name="qr_code_invalid">O QR code é inválido</string>
+  <string name="qr_code_invalid">O código QR é inválido</string>
   <string name="qr_code_unsupported">O código QR que você está tentando escanear é de uma versão antiga do %s, que não é mais suportada.\n\nPor favor, verifique que você e a outra pessoa está usando a versão mais recente e tentem de novo.</string>
   <string name="camera_error">Erro da câmera</string>
   <string name="connecting_to_device">Conectando a device\u2026</string>
@@ -149,6 +154,7 @@
     <item quantity="other">%d novos contatos adicionados.</item>
   </plurals>
   <!--Private Groups-->
+  <string name="groups_list_empty">Nenhum grupo para ser exibido\n\nPressione o ícone + para criar um novo grupo ou peça para seus contatos compartilharem grupos com você.</string>
   <string name="groups_created_by">Criado por %s.</string>
   <plurals name="messages">
     <item quantity="one">%d mensagem</item>
@@ -201,10 +207,12 @@
   <string name="groups_reveal_visible_revealed_by_contact">Relação de contatos está visível para o Grupo (revelado por %s)</string>
   <string name="groups_reveal_invisible">Relação de contatos não visível para o Grupo </string>
   <!--Forums-->
+  <string name="no_forums">Nenhum fórum para ser exibido\n\nPressione o ícone + para criar um fórum ou peça para seus contatos compartilharem fóruns com você.</string>
   <string name="create_forum_title">Criar Fórum</string>
   <string name="choose_forum_hint">Escolha um nome para o seu fórum</string>
   <string name="create_forum_button">Criar fórum</string>
   <string name="forum_created_toast">Fórum criado</string>
+  <string name="no_forum_posts">Nenhum post para ser exibido</string>
   <string name="no_posts">Sem Posts</string>
   <plurals name="posts">
     <item quantity="one">%d Post</item>
@@ -216,17 +224,23 @@
   <string name="btn_reply">Responder</string>
   <string name="forum_leave">Sair do fórum</string>
   <string name="dialog_title_leave_forum">Confirmar saída do fórum</string>
+  <string name="dialog_message_leave_forum">Você tem certeza que quer sair deste fórum?\n\nContatos com quem você tenha compartilhado este fórum podem parar de receber atualizações dele.</string>
   <string name="dialog_button_leave">Sair</string>
+  <string name="forum_left_toast">Sair do fórum</string>
   <!--Forum Sharing-->
   <string name="forum_share_button">Compartilhar fórum</string>
   <string name="contacts_selected">Contatos Selecionados</string>
   <string name="activity_share_toolbar_header">Escolher contatos</string>
+  <string name="no_contacts_selector">Nenhum contato para ser exibido\n\nVolte aqui depois de ter adicionado um contato</string>
   <string name="forum_shared_snackbar">Fòrum compartilhado com os contatos escolhidos</string>
   <string name="forum_share_message">Adicionar uma mensagem (opcional)</string>
   <string name="forum_share_error">Houve um erro em compartilhar esse fórum.</string>
   <string name="forum_invitation_received">%1$s compartilhou o fórum \"%2$s\" com você.</string>
   <string name="forum_invitation_sent">Você compartilhou o fórum \"%1$s\" com %2$s.</string>
   <string name="forum_invitations_title">Convites para Foruns</string>
+  <string name="forum_invitation_exists">Você já aceitou um convite para este fórum.\n\nAceitar mais convites fará com que sua conexão ao fórum fique mais rápida e mais confiável.</string>
+  <string name="forum_joined_toast">Entrou no fórum</string>
+  <string name="forum_declined_toast">Convite recusado</string>
   <string name="shared_by_format">Compartilhado por %s</string>
   <string name="forum_invitation_already_sharing">Já compartilhado</string>
   <string name="forum_invitation_response_accepted_sent">Você aceitou o convite do fórum do %s.</string>
@@ -242,14 +256,19 @@
   </plurals>
   <string name="nobody">Ninguém</string>
   <!--Blogs-->
+  <string name="blogs_other_blog_empty_state">Nenhum post para ser exibido</string>
   <string name="read_more">leia mais</string>
   <string name="blogs_write_blog_post">Escrever Post do Blog</string>
+  <string name="blogs_write_blog_post_body_hint">Digite seu post</string>
   <string name="blogs_publish_blog_post">Publicar</string>
   <string name="blogs_blog_post_created">Post do Blog criado</string>
   <string name="blogs_blog_post_received">Novo Post de Blog recebido</string>
   <string name="blogs_blog_post_scroll_to">Role Para</string>
+  <string name="blogs_feed_empty_state">Nenhum post para ser exibido\n\nPosts dos seus contatos e blogs que você está inscrita apareceção aqui\n\nPressione o ícone da caneta para escrever um post</string>
   <string name="blogs_remove_blog">Remover Blog</string>
+  <string name="blogs_remove_blog_dialog_message">Você tem certeza que quer remover este blog?\n\nOs posts serão removidos do seu dispositivo mas não dos dispositivos das outras pessoas.\n\nContatos com quem você tenha compartilhado este blog devem parar de receber atualizações dele.</string>
   <string name="blogs_remove_blog_ok">Remover</string>
+  <string name="blogs_blog_removed">Blog removido</string>
   <string name="blogs_reblog_comment_hint">Adicionar um comentário (opcional)</string>
   <string name="blogs_reblog_button">Reblog</string>
   <!--Blog Sharing-->
@@ -264,6 +283,8 @@
   <string name="blogs_sharing_invitation_received">%1$s compartilhou o blog \"%2$s\" com você.</string>
   <string name="blogs_sharing_invitation_sent">Você compartilhou o blog \"%1$s\" com %2$s.</string>
   <string name="blogs_sharing_invitations_title">Convites para Fóruns</string>
+  <string name="blogs_sharing_joined_toast">Inscrita ao blog</string>
+  <string name="blogs_sharing_declined_toast">Convite recusado</string>
   <string name="sharing_status_blog">Qualquer pessoa que se inscreva em um blog pode compartilhá-lo com seus contatos. Você está compartilhando este blog com os seguintes contatos. Também podem haver outras pessoas inscritas que você não consegue visualizar.</string>
   <!--RSS Feeds-->
   <string name="blogs_rss_feeds_import">Importar Feed RSS</string>
@@ -275,8 +296,10 @@
   <string name="blogs_rss_feeds_manage_author">Autor:</string>
   <string name="blogs_rss_feeds_manage_updated">Última Atualização:</string>
   <string name="blogs_rss_remove_feed">Remover Feed</string>
+  <string name="blogs_rss_remove_feed_dialog_message">Você tem certeza que deseja remover este feed?\n\nOs posts serão removidos do seus dispositivo mas não dos dispositivos de outras pessoas.\n\nContatos com quem você tenha compartilhado este feed devem parar de receber atualizações dele.</string>
   <string name="blogs_rss_remove_feed_ok">Remover</string>
   <string name="blogs_rss_feeds_manage_delete_error">O Feed não pode ser deletado!</string>
+  <string name="blogs_rss_feeds_manage_empty_state">Nenhum feed RSS para ser exibido\n\nPressione o ícone + para importar um feed</string>
   <string name="blogs_rss_feeds_manage_error">Houve um problema ao carregar seus Feeds. Por favor tente novamente.</string>
   <!--Settings Network-->
   <string name="network_settings_title">Redes</string>
@@ -313,12 +336,16 @@
   <string name="notification_settings_title">Notificações</string>
   <string name="notify_private_messages_setting_title">Mensagens privadas</string>
   <string name="notify_private_messages_setting_summary">Mostrar alertas para mensagens privadas</string>
+  <string name="notify_private_messages_setting_summary_26">Configurar alertas para mensagens privadas</string>
   <string name="notify_group_messages_setting_title">Mensagens de Grupo</string>
   <string name="notify_group_messages_setting_summary">Mostrar alertas para mensagens de Grupos</string>
+  <string name="notify_group_messages_setting_summary_26">Configurar alertas para mensagens de grupos</string>
   <string name="notify_forum_posts_setting_title">Postagens do fórum</string>
   <string name="notify_forum_posts_setting_summary">Mostrar alertas para postagens nos fóruns</string>
+  <string name="notify_forum_posts_setting_summary_26">Configurar alertas para posts de fóruns</string>
   <string name="notify_blog_posts_setting_title">Posts do blog</string>
   <string name="notify_blog_posts_setting_summary">Mostrar alertas para postagens nos blogs</string>
+  <string name="notify_blog_posts_setting_summary_26">Configurar alertas para posts de blogs</string>
   <string name="notify_vibration_setting">Vibrar</string>
   <string name="notify_lock_screen_setting_title">Bloquear a tela</string>
   <string name="notify_lock_screen_setting_summary">Mostrar notificações enquanto a tela estiver bloqueada</string>
@@ -359,8 +386,12 @@
   <string name="screen_filter_allow">Permitir que estes aplicativos se sobreponham</string>
   <!--Permission Requests-->
   <string name="permission_camera_title">Permissão da câmera</string>
-  <string name="permission_camera_request_body">O Briar precisa acessar a câmera para pode escanear o QR code.</string>
+  <string name="permission_camera_request_body">O Briar precisa acessar a câmera para pode escanear o código QR.</string>
   <string name="permission_camera_denied_body">Você negou acesso à câmera, mas para adicionar contatos você precisa da câmera.\n\nPor favor, pense em liberar o acesso a ela.</string>
   <string name="permission_camera_denied_toast">A permissão da câmera não foi concedida</string>
   <string name="qr_code">Código QR</string>
+  <string name="show_qr_code_fullscreen">Mostrar o código QR na tela cheia</string>
+  <!--Low Memory Notification-->
+  <string name="low_memory_shutdown_notification_title">Saiu do Briar</string>
+  <string name="low_memory_shutdown_notification_text">Saiu do Briar devido a falta de memória</string>
 </resources>
